# market-brief

./: .gitignore  CLAUDE.md  HANDOFF_DESIGN.md  HANDOFF_PHASE7.md  START_HERE.md  brief.py  config.yaml  last_run.json  progress.md  requirements.txt  test_send.py
engine/: diff.py  (+14 more)
v2/: brief.py  config.yaml  last_run.json  pyproject.toml  requirements.txt
v2/marketbrief/assemble/: banner.py  brief_view.py  diff_line.py  fence.py  glance.py  topstory.py
v2/marketbrief/compute/: derive.py  movers.py
v2/marketbrief/core/: config.py  context.py  enums.py  health.py  isolation.py  models.py  pipeline.py  protocols.py  registry.py  state.py  symbols.py
v2/marketbrief/deploy/: heartbeat.py  schedule.py  state_commit.py
v2/tests/: test_assemble_fence_banner.py  test_assemble_top.py  test_assemble_topstory.py  test_charts.py  test_config.py  test_config_charts.py  test_config_schedule.py  test_context.py  test_deploy_heartbeat.py  test_deploy_schedule.py  test_deploy_state_commit.py  test_derive.py  test_end_to_end.py  test_entailment.py  test_fetch_integration.py  test_fred_source.py  test_health.py  test_invariants.py  test_isolation.py  test_models.py  test_movers_compute.py  test_narrate_client.py  test_narrator.py  test_net.py  test_number_check.py  test_pipeline.py  test_pipeline_assemble.py  test_pipeline_narrate.py  test_plugins.py  test_prompt.py  test_registry.py  test_render.py  test_render_briefview.py  test_resolver.py  test_rss_source.py  test_scorer.py  test_section_equities.py  test_section_format.py  test_sections_narrative.py  test_sections_numeric.py  (+9 more)
(+105 files in other folders)
