[project]
name = "marketbrief"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.6", "PyYAML>=6.0", "Jinja2>=3.1", "requests>=2.31", "feedparser>=6.0", "anthropic>=0.111", "matplotlib>=3.8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
